--- a/requirements.txt
+++ b/requirements.txt
@@ -1,92 +1,93 @@
-alembic==1.0.0
-amqp==2.3.2
-asn1crypto==0.24.0
-Babel==2.6.0
-billiard==3.5.0.4
-bleach==3.0.2
-boto3==1.4.7
-botocore==1.7.48
-cchardet==1.1.3
-celery==4.2.1
-certifi==2018.8.24
-cffi==1.11.5
-colorama==0.3.9
+aiohttp==3.6.2
+alembic==1.4.2
+amqp==2.6.1
+apache-superset==0.37.0
+apispec==3.3.1
+async-timeout==3.0.1
+attrs==19.3.0
+Babel==2.8.0
+backoff==1.10.0
+billiard==3.6.3.0
+bleach==3.1.5
+Brotli==1.0.7
+cachelib==0.1.1
+celery==4.4.7
+cffi==1.14.1
 chardet==3.0.4
-click==6.7
-contextlib2==0.5.5
-cryptography==2.3.1
-defusedxml==0.5.0
-docutils==0.14
-et-xmlfile==1.0.1
-Flask==0.12.4
-Flask-AppBuilder==1.10.0
-Flask-Babel==0.11.1
-Flask-Caching==1.4.0
-Flask-Compress==1.4.0
-Flask-Login==0.2.11
-Flask-Migrate==2.2.1
+click==7.1.2
+colorama==0.4.3
+contextlib2==0.6.0.post1
+croniter==0.3.34
+cryptography==3.0
+dataclasses==0.6
+decorator==4.4.2
+defusedxml==0.6.0
+dnspython==2.0.0
+email-validator==1.1.1
+Flask==1.1.2
+Flask-AppBuilder==3.0.1
+Flask-Babel==1.0.0
+Flask-Caching==1.9.0
+Flask-Compress==1.5.0
+Flask-JWT-Extended==3.24.1
+Flask-Login==0.4.1
+Flask-Migrate==2.5.3
 Flask-OpenID==1.2.5
-Flask-Script==2.0.6
-Flask-SQLAlchemy==2.1
-Flask-Testing==0.7.1
-Flask-WTF==0.14.2
-flower==0.9.2
-future==0.16.0
-geographiclib==1.49
-geopy==1.17.0
-gunicorn==19.9.0
-humanize==0.5.1
-idna==2.7
-ijson==2.3
+Flask-SQLAlchemy==2.4.4
+flask-talisman==0.7.0
+Flask-WTF==0.14.3
+geographiclib==1.50
+geopy==2.0.0
+gunicorn==20.0.4
+humanize==2.6.0
+idna==2.10
 isodate==0.6.0
-itsdangerous==0.24
-jdcal==1.4
-Jinja2==2.10
-jmespath==0.9.3
-jsonlines==1.2.0
-jsonschema==2.6.0
-kombu==4.2.1
-linear-tsv==1.1.0
-Mako==1.0.7
-Markdown==2.6.11
-MarkupSafe==1.0
-numpy==1.15.2
-openpyxl==2.4.11
-pandas==0.23.4
-parsedatetime==2.4
-pathlib2==2.3.2
-polyline==1.3.2
-pycparser==2.19
-pydruid==0.4.5
-PyHive==0.6.1
-python-dateutil==2.7.3
-python-editor==1.0.3
+itsdangerous==1.1.0
+Jinja2==2.11.2
+jsonschema==3.2.0
+kombu==4.6.11
+Mako==1.1.3
+Markdown==3.2.2
+MarkupSafe==1.1.1
+marshmallow==3.7.1
+marshmallow-enum==1.5.1
+marshmallow-sqlalchemy==0.23.1
+msgpack==1.0.0
+multidict==4.7.6
+natsort==7.0.1
+numpy==1.19.1
+packaging==20.4
+pandas==1.0.5
+parsedatetime==2.6
+pathlib2==2.3.5
+polyline==1.4.0
+prison==0.1.3
+psycopg2-binary==2.8.5
+py==1.9.0
+pyarrow==0.17.1
+pycparser==2.20
+PyJWT==1.7.1
+pyparsing==2.4.7
+pyrsistent==0.16.0
+python-dateutil==2.8.1
+python-dotenv==0.14.0
+python-editor==1.0.4
 python-geohash==0.8.5
-python3-openid==3.1.0
-pytz==2018.5
-PyYAML==3.13
-requests==2.19.1
-rfc3986==1.1.0
-s3transfer==0.1.13
-sasl==0.2.1
-simplejson==3.16.0
-six==1.11.0
-SQLAlchemy==1.2.12
-SQLAlchemy-Utils==0.33.5
-sqlparse==0.2.4
-superset==0.27.0
-tableschema==1.2.4
-tabulator==1.15.0
-thrift==0.11.0
-thrift-sasl==0.3.0
-tornado==5.1.1
-unicodecsv==0.14.1
-Unidecode==1.0.22
-urllib3==1.23
-vine==1.1.4
+python3-openid==3.2.0
+pytz==2020.1
+PyYAML==5.3.1
+retry==0.9.2
+selenium==3.141.0
+simplejson==3.17.2
+six==1.15.0
+slackclient==2.5.0
+SQLAlchemy==1.3.18
+SQLAlchemy-Utils==0.36.8
+sqlparse==0.3.0
+urllib3==1.25.10
+vine==1.3.0
 webencodings==0.5.1
-Werkzeug==0.14.1
-WTForms==2.2.1
-xlrd==1.1.0
-Psycopg2==2.7.4
-pymssql
+Werkzeug==1.0.1
+WTForms==2.3.3
+WTForms-JSON==0.3.3
+yarl==1.5.1
