--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,8 @@ flask-talisman==0.7.0
 Flask-WTF==0.14.3
 geographiclib==1.50
 geopy==2.0.0
+gevent==20.6.2
+greenlet==0.4.16
 gunicorn==20.0.4
 humanize==2.6.0
 idna==2.10
@@ -91,3 +93,5 @@ Werkzeug==1.0.1
 WTForms==2.3.3
 WTForms-JSON==0.3.3
 yarl==1.5.1
+zope.event==4.4
+zope.interface==5.1.0
